// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test PrioReviewBucket component Should renders PrioReviewBuckets correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
      Object {
        "backgroundColor": "#C2571A",
        "borderColor": "#848484",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": "3%",
        "marginTop": 5,
        "paddingBottom": "8%",
        "paddingTop": "4%",
        "width": "90%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
        },
        Object {
          "backgroundColor": "#C2571A",
        },
      ]
    }
  >
    <RCTScrollView
      data={
        Array [
          Object {
            "data": Array [
              Object {
                "_id": "622605f8766c2b210fcc5890",
                "description": "",
                "goal_id": "61d024a2b4cda2847a224bdf",
                "priority": Object {
                  "importance": "yes",
                  "index": 0,
                  "tier": "highest",
                  "urgency": "yes",
                },
                "status": "open",
                "title": "Test1",
              },
              Object {
                "_id": "622605fd766c2b210fcc5891",
                "description": "",
                "goal_id": "61d024a2b4cda2847a224bdf",
                "priority": Object {
                  "importance": "yes",
                  "index": 0,
                  "tier": "highest",
                  "urgency": "yes",
                },
                "status": "open",
                "title": "Test2",
              },
            ],
            "title": "1. Do these before anything else",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={
        Array [
          0,
        ]
      }
      updateCellsBatchingPeriod={50}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#fff",
                },
                Object {
                  "fontFamily": "Lexend-SemiBold",
                  "fontSize": 16,
                  "paddingBottom": "5%",
                  "paddingLeft": "5%",
                  "paddingTop": 5,
                  "textAlign": "left",
                },
              ]
            }
          >
            1. Do these before anything else
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                },
                Object {
                  "alignItems": "center",
                  "borderColor": "#848484",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 5,
                  "marginLeft": "7.5%",
                  "marginRight": "7.5%",
                  "marginTop": 5,
                  "paddingBottom": 8,
                  "paddingTop": 8,
                  "width": "85%",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#554F4F",
                  },
                  Object {
                    "fontFamily": "Lexend-Regular",
                    "fontSize": 14,
                  },
                ]
              }
            >
              Test1
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                },
                Object {
                  "alignItems": "center",
                  "borderColor": "#848484",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 5,
                  "marginLeft": "7.5%",
                  "marginRight": "7.5%",
                  "marginTop": 5,
                  "paddingBottom": 8,
                  "paddingTop": 8,
                  "width": "85%",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#554F4F",
                  },
                  Object {
                    "fontFamily": "Lexend-Regular",
                    "fontSize": 14,
                  },
                ]
              }
            >
              Test2
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        />
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Test PrioReviewBucket component Should renders PrioReviewBuckets correctly 2`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
      Object {
        "backgroundColor": "#0D9BC3",
        "borderColor": "#848484",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": "3%",
        "marginTop": 5,
        "paddingBottom": "8%",
        "paddingTop": "4%",
        "width": "90%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
        },
        Object {
          "backgroundColor": "#0D9BC3",
        },
      ]
    }
  >
    <RCTScrollView
      data={
        Array [
          Object {
            "data": Array [
              Object {
                "_id": "62260602766c2b210fcc5892",
                "description": "",
                "goal_id": "61d024a2b4cda2847a224bdf",
                "priority": Object {
                  "importance": "yes",
                  "index": 0,
                  "tier": "high",
                  "urgency": "no",
                },
                "status": "open",
                "title": "test3",
              },
              Object {
                "_id": "62260606766c2b210fcc5893",
                "description": "",
                "goal_id": "61d024a2b4cda2847a224bdf",
                "priority": Object {
                  "importance": "yes",
                  "index": 0,
                  "tier": "high",
                  "urgency": "no",
                },
                "status": "open",
                "title": "Test4",
              },
            ],
            "title": "2. Sort these important things out",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={
        Array [
          0,
        ]
      }
      updateCellsBatchingPeriod={50}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#fff",
                },
                Object {
                  "fontFamily": "Lexend-SemiBold",
                  "fontSize": 16,
                  "paddingBottom": "5%",
                  "paddingLeft": "5%",
                  "paddingTop": 5,
                  "textAlign": "left",
                },
              ]
            }
          >
            2. Sort these important things out
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                },
                Object {
                  "alignItems": "center",
                  "borderColor": "#848484",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 5,
                  "marginLeft": "7.5%",
                  "marginRight": "7.5%",
                  "marginTop": 5,
                  "paddingBottom": 8,
                  "paddingTop": 8,
                  "width": "85%",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#554F4F",
                  },
                  Object {
                    "fontFamily": "Lexend-Regular",
                    "fontSize": 14,
                  },
                ]
              }
            >
              test3
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                },
                Object {
                  "alignItems": "center",
                  "borderColor": "#848484",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 5,
                  "marginLeft": "7.5%",
                  "marginRight": "7.5%",
                  "marginTop": 5,
                  "paddingBottom": 8,
                  "paddingTop": 8,
                  "width": "85%",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#554F4F",
                  },
                  Object {
                    "fontFamily": "Lexend-Regular",
                    "fontSize": 14,
                  },
                ]
              }
            >
              Test4
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        />
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Test PrioReviewBucket component Should renders PrioReviewBuckets correctly 3`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
      Object {
        "backgroundColor": "#FEFEF8",
        "borderColor": "#848484",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": "3%",
        "marginTop": 5,
        "paddingBottom": "8%",
        "paddingTop": "4%",
        "width": "90%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#848484",
        },
        Object {
          "fontFamily": "Lexend-SemiBold",
          "fontSize": 16,
          "paddingLeft": "5%",
          "paddingTop": 5,
        },
      ]
    }
  >
    3. These can wait a bit
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FEFEF8",
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": "6%",
          "paddingTop": "12%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#848484",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 14,
          },
        ]
      }
    >
      No awaiting tasks
    </Text>
  </View>
</View>
`;

exports[`Test PrioReviewBucket component Should renders PrioReviewBuckets correctly 4`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
      Object {
        "backgroundColor": "#EFD469",
        "borderColor": "#848484",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": "3%",
        "marginTop": 5,
        "paddingBottom": "8%",
        "paddingTop": "4%",
        "width": "90%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
        },
        Object {
          "backgroundColor": "#EFD469",
        },
      ]
    }
  >
    <RCTScrollView
      data={
        Array [
          Object {
            "data": Array [
              Object {
                "_id": "62260609766c2b210fcc5894",
                "description": "",
                "goal_id": "61d024a2b4cda2847a224bdf",
                "priority": Object {
                  "importance": "no",
                  "index": 0,
                  "tier": "low",
                  "urgency": "no",
                },
                "status": "open",
                "title": "test5",
              },
            ],
            "title": "4. These are for spare time",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={
        Array [
          0,
        ]
      }
      updateCellsBatchingPeriod={50}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#fff",
                },
                Object {
                  "fontFamily": "Lexend-SemiBold",
                  "fontSize": 16,
                  "paddingBottom": "5%",
                  "paddingLeft": "5%",
                  "paddingTop": 5,
                  "textAlign": "left",
                },
              ]
            }
          >
            4. These are for spare time
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                },
                Object {
                  "alignItems": "center",
                  "borderColor": "#848484",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 5,
                  "marginLeft": "7.5%",
                  "marginRight": "7.5%",
                  "marginTop": 5,
                  "paddingBottom": 8,
                  "paddingTop": 8,
                  "width": "85%",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#554F4F",
                  },
                  Object {
                    "fontFamily": "Lexend-Regular",
                    "fontSize": 14,
                  },
                ]
              }
            >
              test5
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        />
      </View>
    </RCTScrollView>
  </View>
</View>
`;
